# agent_dispatch

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
docs/: 2026-03-28-agent-dispatch-plan.md  2026-03-28-phase5-plan.md
src/agent_dispatch/: __init__.py  __main__.py  cli.py  db.py  models.py  network.py
tests/: test_cli.py  test_db.py  test_db_properties.py  test_entrypoint.py  test_models.py  test_network.py
